2024-01-24  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man,
	* cweb.man: Regenerate with Pandoc 3.1.11.1.

2023-12-02  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man: CWEB 4.11 release.

2023-10-30  Andreas Scherer  <https://ascherer.github.io>

	* twill.man: Mention 'twill-refsort'.

2023-10-29  Andreas Scherer  <https://ascherer.github.io>

	* cweb.man: Regenerate with Pandoc 3.1.9.
	* ctwill.man: Make 'proofsort' like 'refsort'.

2023-10-13  Andreas Scherer  <https://ascherer.github.io>

	* weave.man: Add option '-p' to '\input pwebmac'.

2023-09-22  Andreas Scherer  <https://ascherer.github.io>

	* cweb.man,
	* ctwill.man: Regenerate with Pandoc 3.1.7.

2023-08-24  vaitkus  <antanas.vaitkus90@gmail.com>

	* aleph.man,
	* bibtex.man,
	* etex.man,
	* mf.man,
	* pdftex.man: fix man page typos. Submitted at:
	https://github.com/TeX-Live/texlive-source/pull/61

2023-08-19  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man: CWEB 4.10 release.

2023-06-16  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man: Add information on 'ctwill-proofsort'.

2023-05-15  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man: CWEB 4.9 release.

2023-03-09  Karl Berry  <karl@tug.org>

	* TL'23 release.

2022-09-01  Andreas Scherer  <https://ascherer.github.io>

	* tie.man: Fix the recent fix.

2022-08-30  Karl Berry  <karl@freefriends.org>

	* ptftopl.man,
	* tie.man: typo fixes from Hilmar Preu\ss{}e,
	https://tug.org/pipermail/tex-live/2022-June/048227.html

2022-08-21  Andreas Scherer  <https://ascherer.github.io>

	* cweb.man: New option '+u' for CTANGLE.

2022-06-05  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man: CWEB 4.8 release.

2022-03-27  Andreas Scherer  <https://ascherer.github.io>

	* tangle.man,
	* weave.man: Improved SYNOPSIS formatting.

2022-03-21  Karl Berry  <karl@tug.org>

	* TL'22 release.

2022-03-08  Karl Berry  <karl@freefriends.org>

	* ofm2opl.man,
	* opl2ofm.man,
	* ovf2ovp.man,